# resume

./: .gitignore  Cargo.toml  DEPLOYMENT.md  README.md  Trunk.toml  index.html  styles.css
.github/workflows/: deploy.yml
src/: lib.rs
src/components/: navbar.rs
src/pages/: blog.rs  home.rs  mod.rs  resume.rs  simulations.rs
