[package]
name = "resume-blog"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
yew = { version = "0.21", features = ["csr"] }
yew-router = "0.18"
wasm-bindgen-futures = "0.4"
gloo = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
pulldown-cmark = "0.9"

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
  "Document",
  "Element",
  "HtmlElement",
  "Window",
  "WebGlRenderingContext",
  "WebGl2RenderingContext",
  "HtmlCanvasElement",
]
